# qpac

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENCE  README.md  makefile  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  codecov.yml  release.yml
docs/: naming-conventions.md
docs/indicators/: selection.md
docs/indicators/assessment/: dividend-yeld.md  ev-ebitda.md  price-to-book.md  price-to-earnings.md  price-to-sales.md
docs/indicators/composite/: discounted-free-cash-flow.md  graham.md  magic-formula.md  peg-ratio.md
docs/indicators/financial-solidity/: altman-z-score.md  cash-ratio.md  current-ratio.md  debt-to-equity.md  interest-coverage-ratio.md  quick-ratio.md
docs/indicators/operational-efficiency/: asset-turnover.md  da-sales-outstanding.md  inventory-turnover.md  operating-cash-flow-margin.md
docs/indicators/profitability/: gross-profit-margin.md  net-profit-margin.md  return-on-assets.md  return-on-equity.md  return-on-invested-capital.md
src/pac/: cli.py
src/pac/ingestion/: generator.py
tests/: conftest.py  test_dummy.py
